--- a/CurrencyConverter.csproj
+++ b/CurrencyConverter.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
+    <PackageReference Include="xunit.assert" Version="2.5.3" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.5.3" />
   </ItemGroup>
 
 </Project>
